[Build] Removing lexer.c & lexer.h

--- a/meson.build
+++ b/meson.build
@@ -9,8 +9,8 @@
 #-------------------------------------------------------------------------------------------
 project('HyperLang', 'c', license: 'MIT')
 
-sources = ['src/lexer.c', 'src/logger.c', 'src/main.c', 'src/utils.c']
-headers = ['include/lexer.h', 'include/logger.h', 'include/utils.h']
+sources = ['src/logger.c', 'src/main.c', 'src/utils.c']
+headers = ['include/logger.h', 'include/utils.h']
 
 include = include_directories('include')
 executable('HyperLang', sources, headers, include_directories: include)
