[Token] Adding to_string function for debugging and removing meson

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,8 @@ endif ()
 set(SOURCES
 		src/lexer.c
 		src/logger.c
-		src/main.c)
+		src/main.c
+		src/token.c)
 
 set(HEADERS
 		include/lexer.h
