[AST] Adding basic ast and arithmetic operations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,12 +75,18 @@ endif ()
 # HyperLang
 #-------------------------------------------------------------------------------------------
 set(SOURCES
+        src/ast.c
+        src/expressions.c
+        src/interpreter.c
 		src/lexer.c
 		src/logger.c
 		src/main.c
 		src/token.c)
 
 set(HEADERS
+        include/ast.h
+        include/expressions.h
+        include/interpreter.h
 		include/lexer.h
 		include/logger.h
 		include/token.h)
