[General] Adding LLVM optimization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ endif ()
 #-------------------------------------------------------------------------------------------
 # LLVM
 #-------------------------------------------------------------------------------------------
+set(LLVM_OPTIMIZED_TABLEGEN ON)
 add_subdirectory(thirdparty/llvm)
 
 #-------------------------------------------------------------------------------------------
