--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "thirdparty/llvm"]
-	path = thirdparty/llvm
-	url = https://github.com/llvm-mirror/llvm
+[submodule "Source/ThirdParty/fmt"]
+	path = Source/ThirdParty/fmt
+	url = https://github.com/fmtlib/fmt
