--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -51,8 +51,9 @@ jobs:
           sudo apt update -qq
           sudo apt install -y \
             clang-10 \
-            llvm-10 \
             cmake \
+            llvm-10-dev \
+            lld-10 \
             gcc-10 \
             g++-10
 
