[General] Adding ccache and fixing every warning

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -49,7 +49,9 @@ jobs:
       - name: Update environment
         run: |
           sudo apt update -qq
+          sudo apt upgrade -qq
           sudo apt install -y \
+            ccache \
             clang-10 \
             cmake \
             llvm-10-dev \
