[General] Changing LLVM package to non dev

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -54,7 +54,7 @@ jobs:
             ccache \
             clang-10 \
             cmake \
-            llvm-10-dev \
+            llvm-10 \
             lld-10 \
             gcc-10 \
             g++-10
