[General] Changing packages

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -54,11 +54,11 @@ jobs:
             clang-10 \
             cmake \
             llvm-10 \
-            lld-10 \
+            llvm-10-dev \
+            liblld-10 \
+            liblld-10-dev \
             gcc-10 \
             g++-10
-          which llvm-10
-          which lld-10
 
       - name: Configure CMake
         run: |
