[General] Adding doxygen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,9 @@ enable_warnings(ProjectWarnings)
 include(Development/CMake/Sanitizers.cmake)
 enable_sanitizers(ProjectOptions)
 
+include(Development/CMake/Doxygen.cmake)
+enable_doxygen()
+
 include(Development/CMake/StaticAnalyzers.cmake)
 
 #-------------------------------------------------------------------------------------------
