--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,12 @@
 cmake_minimum_required(VERSION 3.10)
 project(HyperLang LANGUAGES C CXX)
 
+set(CMAKE_FIND_PACKAGE_SORT_ORDER NATURAL)
+set(CMAKE_FIND_PACKAGE_SORT_DIRECTION DEC)
+
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+
 #-------------------------------------------------------------------------------------------
 # Modules
 #-------------------------------------------------------------------------------------------
