--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,70 @@
+#-------------------------------------------------------------------------------------------
+# Copyright (c) 2020-2021, SkillerRaptor <skillerraptor@protonmail.com>
+#
+# SPDX-License-Identifier: MIT
+#-------------------------------------------------------------------------------------------
+
+#-------------------------------------------------------------------------------------------
 # Prerequisites
+#-------------------------------------------------------------------------------------------
 *.d
 
+#-------------------------------------------------------------------------------------------
 # Compiled Object files
+#-------------------------------------------------------------------------------------------
 *.slo
 *.lo
 *.o
 *.obj
 
+#-------------------------------------------------------------------------------------------
 # Precompiled Headers
+#-------------------------------------------------------------------------------------------
 *.gch
 *.pch
 
+#-------------------------------------------------------------------------------------------
 # Compiled Dynamic libraries
+#-------------------------------------------------------------------------------------------
 *.so
 *.dylib
 *.dll
 
+#-------------------------------------------------------------------------------------------
 # Fortran module files
+#-------------------------------------------------------------------------------------------
 *.mod
 *.smod
 
+#-------------------------------------------------------------------------------------------
 # Compiled Static libraries
+#-------------------------------------------------------------------------------------------
 *.lai
 *.la
 *.a
 *.lib
 
+#-------------------------------------------------------------------------------------------
 # Executables
+#-------------------------------------------------------------------------------------------
 *.out
 *.app
 
+#-------------------------------------------------------------------------------------------
+# Build folders
+#-------------------------------------------------------------------------------------------
+/build/
+/bin/
+
+#-------------------------------------------------------------------------------------------
+# CLion
+#-------------------------------------------------------------------------------------------
+/.idea/
+/cmake-build-*/
+
+#-------------------------------------------------------------------------------------------
 # Visual Studio
+#-------------------------------------------------------------------------------------------
 .vs/
 *.sln
 *.vcxproj
@@ -39,7 +73,9 @@
 bin/
 bin-int/
 
+#-------------------------------------------------------------------------------------------
 # Visual C++ cache files
+#-------------------------------------------------------------------------------------------
 ipch/
 *.aps
 *.ncb
@@ -48,20 +84,7 @@ ipch/
 *.sdf
 *.cachefile
 
-# CLion
-/.idea/
-
-# VsCode
+#-------------------------------------------------------------------------------------------
+# Visual Studio Code
+#-------------------------------------------------------------------------------------------
 /.vscode/
-
-# Config Files
-*.ini
-*.cfg
-*.json
-
-# CMake
-/build/
-/cmake-build-*/
-
-# Doxygen
-/Doxygen/
