--- a/Source/Hyper/CMakeLists.txt
+++ b/Source/Hyper/CMakeLists.txt
@@ -7,4 +7,15 @@
 #-------------------------------------------------------------------------------------------
 # Hyper
 #-------------------------------------------------------------------------------------------
-add_subdirectory(Hyper)
+set(SOURCES
+        src/main.cpp
+        )
+
+set(HEADERS
+        )
+
+hyperlang_define_executable(Hyper)
+target_link_libraries(
+        Hyper
+        PRIVATE
+        CONAN_PKG::llvm-core)
