--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -8,19 +8,30 @@ jobs:
     defaults:
       run:
         shell: bash
-    env:
-      conan_path: "$HOME/.local/bin"
-      conan_user_home: "${{ github.workspace }}/conan-cache"
     strategy:
       fail-fast: false
       matrix:
         config:
+          - {
+            name: "Ubuntu Clang Debug",
+            artifact: "linux-clang-debug.tar.xz",
+            cc: "clang-10",
+            cxx: "clang++-10",
+            build_type: "Debug"
+          }
           - {
             name: "Ubuntu GCC Debug",
             artifact: "linux-gcc-debug.tar.xz",
             cc: "gcc-10",
             cxx: "g++-10",
             build_type: "Debug"
+          }
+          - {
+            name: "Ubuntu Clang Release",
+            artifact: "linux-clang-release.tar.xz",
+            cc: "clang-10",
+            cxx: "clang++-10",
+            build_type: "Release"
           }
           - {
             name: "Ubuntu GCC Release",
@@ -35,15 +46,6 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Cache
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-conan-modules
-        with:
-          path: |
-            ${{ env.conan_user_home }}
-          key: ${{ runner.os }}-${{ matrix.config.build_type }}-${{ hashFiles('CMakeLists.txt') }}-${{ hashFiles('Development/CMake/Conan.cmake') }}
-
       - name: Update environment
         run: |
           sudo apt update -qq
@@ -52,15 +54,7 @@ jobs:
             clang-10 \
             cmake \
             gcc-10 \
-            g++-10 \
-            llvm-10 \
-            xorg-dev
-
-      - name: Install Conan
-        shell: bash
-        run: |
-          python3 -m pip install --upgrade pip setuptools
-          python3 -m pip install conan
+            g++-10
 
       - name: Configure CMake
         run: |
