Utils: Adding logger

--- a/Source/Hyper/CMakeLists.txt
+++ b/Source/Hyper/CMakeLists.txt
@@ -8,9 +8,17 @@
 # Hyper
 #-------------------------------------------------------------------------------------------
 set(SOURCES
-        src/main.c)
+        src/logger.c
+        src/main.c
+        src/utils.c)
 
 set(HEADERS
-        )
+        include/colors.h
+        include/logger.h
+        include/utils.h)
 
-hyperlang_define_executable(Hyper)
+hyperlang_define_executable(hyper)
+add_custom_command(
+        TARGET hyper
+        POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/tests $<TARGET_FILE_DIR:hyper>/tests)
