Config: Adding version

--- a/Source/Hyper/CMakeLists.txt
+++ b/Source/Hyper/CMakeLists.txt
@@ -14,6 +14,7 @@ set(SOURCES
 
 set(HEADERS
         include/colors.h
+        include/config.h
         include/logger.h
         include/utils.h)
 
