--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -8,6 +8,9 @@ jobs:
     defaults:
       run:
         shell: bash
+    env:
+      conan_path: "$HOME/.local/bin"
+      conan_user_home: "${{ github.workspace }}/conan-cache"
     strategy:
       fail-fast: false
       matrix:
@@ -46,6 +49,15 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Cache
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-conan-modules
+        with:
+          path: |
+            ${{ env.conan_user_home }}
+          key: ${{ runner.os }}-${{ matrix.config.build_type }}-${{ hashFiles('CMakeLists.txt') }}-${{ hashFiles('Development/CMake/Conan.cmake') }}
+
       - name: Update environment
         run: |
           sudo apt update -qq
@@ -55,6 +67,12 @@ jobs:
             cmake \
             gcc-10 \
             g++-10
+
+      - name: Install Conan
+        shell: bash
+        run: |
+          python3 -m pip install --upgrade pip setuptools
+          python3 -m pip install conan
 
       - name: Configure CMake
         run: |
