--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -8,6 +8,8 @@ jobs:
     defaults:
       run:
         shell: cmd
+    env:
+      conan_user_home: "${{ github.workspace }}/conan-cache"
     strategy:
       fail-fast: false
       matrix:
@@ -35,6 +37,21 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+
+      - name: Cache
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-conan-modules
+        with:
+          path: |
+            ${{ env.conan_user_home }}
+          key: ${{ runner.os }}-${{ matrix.config.build_type }}-${{ hashFiles('CMakeLists.txt') }}-${{ hashFiles('Development/CMake/Conan.cmake') }}
+
+      - name: Install Conan
+        shell: bash
+        run: |
+          python3 -m pip install --upgrade pip setuptools
+          python3 -m pip install conan
 
       - name: Configure CMake
         run: |
