--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -8,9 +8,6 @@ jobs:
     defaults:
       run:
         shell: bash
-    env:
-      conan_path: "$HOME/.local/bin"
-      conan_user_home: "${{ github.workspace }}/conan-cache"
     strategy:
       fail-fast: false
       matrix:
@@ -20,64 +17,28 @@ jobs:
             artifact: "linux-clang-debug.tar.xz",
             cc: "clang-10",
             cxx: "clang++-10",
-            build_type: "Debug",
-            build_options: ""
+            build_type: "Debug"
           }
           - {
             name: "Ubuntu GCC Debug",
             artifact: "linux-gcc-debug.tar.xz",
             cc: "gcc-10",
             cxx: "g++-10",
-            build_type: "Debug",
-            build_options: ""
-          }
-          - {
-            name: "Ubuntu Clang Debug Sanitizers",
-            artifact: "linux-clang-debug-sanitizers.tar.xz",
-            cc: "clang-10",
-            cxx: "clang++-10",
-            build_type: "Debug",
-            build_options: "-D ENABLE_COVERAGE=ON -D ENABLE_SANITIZER_ADDRESS=ON -D ENABLE_SANITIZER_LEAK=ON -D ENABLE_SANITIZER_UNDEFINED_BEHAVIOR=ON"
-          }
-          - {
-            name: "Ubuntu GCC Debug Sanitizers",
-            artifact: "linux-gcc-debug-sanitizers.tar.xz",
-            cc: "gcc-10",
-            cxx: "g++-10",
-            build_type: "Debug",
-            build_options: "-D ENABLE_COVERAGE=ON -D ENABLE_SANITIZER_ADDRESS=ON -D ENABLE_SANITIZER_LEAK=ON -D ENABLE_SANITIZER_UNDEFINED_BEHAVIOR=ON"
+            build_type: "Debug"
           }
           - {
             name: "Ubuntu Clang Release",
             artifact: "linux-clang-release.tar.xz",
             cc: "clang-10",
             cxx: "clang++-10",
-            build_type: "Release",
-            build_options: ""
+            build_type: "Release"
           }
           - {
             name: "Ubuntu GCC Release",
             artifact: "linux-gcc-release.tar.xz",
             cc: "gcc-10",
             cxx: "g++-10",
-            build_type: "Release",
-            build_options: ""
-          }
-          - {
-            name: "Ubuntu Clang Release Sanitizers",
-            artifact: "linux-clang-release-sanitizers.tar.xz",
-            cc: "clang-10",
-            cxx: "clang++-10",
-            build_type: "Release",
-            build_options: "-D ENABLE_COVERAGE=ON -D ENABLE_SANITIZER_ADDRESS=ON -D ENABLE_SANITIZER_LEAK=ON -D ENABLE_SANITIZER_UNDEFINED_BEHAVIOR=ON"
-          }
-          - {
-            name: "Ubuntu GCC Release Sanitizers",
-            artifact: "linux-gcc-release-sanitizers.tar.xz",
-            cc: "gcc-10",
-            cxx: "g++-10",
-            build_type: "Release",
-            build_options: "-D ENABLE_COVERAGE=ON -D ENABLE_SANITIZER_ADDRESS=ON -D ENABLE_SANITIZER_LEAK=ON -D ENABLE_SANITIZER_UNDEFINED_BEHAVIOR=ON"
+            build_type: "Release"
           }
     steps:
       - name: Checkout
@@ -85,48 +46,21 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Cache
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-conan-modules
-        with:
-          path: |
-            ${{ env.conan_user_home }}
-            ~/.cache/pip
-          key: ${{ runner.os }}-${{ matrix.config.build_type }}-${{ hashFiles('CMakeLists.txt') }}-${{ hashFiles('Development/CMake/Conan.cmake') }}
-
       - name: Update environment
         run: |
           sudo apt update -qq
           sudo apt install -y \
-            ccache \
             clang-10 \
             cmake \
             gcc-10 \
-            g++-10 \
-            gcovr \
-            llvm-10 \
-            libgl1-mesa-dev \
-            xorg-dev
-
-      - name: Install Conan
-        shell: bash
-        run: |
-          pip3 install wheel setuptools gcovr
-          pip3 install conan --upgrade
-
-      - name: Install / Configure dependencies
-        shell: bash
-        run: |
-          sudo update-alternatives --install /usr/bin/conan conan $HOME/.local/bin/conan 100
-          sudo update-alternatives --config conan
+            g++-10
 
       - name: Configure CMake
         run: |
           export CC=${{ matrix.config.cc }}
           export CXX=${{ matrix.config.cxx }}
 
-          cmake . -B build -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} ${{ matrix.config.build_options }}
+          cmake . -B build -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
 
       - name: Build
         run: |
@@ -135,11 +69,6 @@ jobs:
       - name: Test
         run: |
           cd build
-          ctest -C ${{ matrix.config.build_type }}
-
-      - name: Coverage
-        run: |
-          gcovr -j $(nproc) --delete --root . --print-summary --xml-pretty --xml coverage.xml .
 
       - name: Prepare upload
         run: |
